--- a/m/ma/mat/matrix.com.html
+++ b/m/ma/mat/matrix.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the matrix.com privacy policy that was archived on 2006-10-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20061014185935id_/http%3A//matrix.com/about_matrix/privacy_statement.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the matrix.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229130315id_/http%3A//www.matrix.com/about_matrix/privacy_statement.aspx) for the most accurate reproduction.-->
 
 <html><head>
 <title>Matrix - Privacy Statement</title>
@@ -23,7 +23,7 @@ if (n) {//netscape-PC
 </script><link rel="stylesheet" href="/css/global.css" type="text/css">
 <script language="JavaScript" type="text/javascript" src="/js/global.js"></script><style type="text/css">#menu1Container { visibility:hidden; left:0px; top:1px; overflow:hidden; z-index:10000; }#menu1Container, #menu1Content { position:absolute; width:140px; height:286px; clip:rect(0 140 286 0); }</style><script language="JavaScript" type="text/javascript">
 <!--
-function navImg(navItem){var nav1 = 'hairstyles';var nav2 = 'stylists_tips';var nav3 = 'Celebrity_Styles';var nav4 = 'Find_A_Salon';var nav5 = 'Salon_Offers';var nav6 = 'Matrix_Buzz';var nav7 = 'Editors_Picks';var nav8 = 'About_Matrix';return eval('nav' + navItem);}
+function navImg(navItem){var nav1 = 'hairstyles';var nav2 = 'stylists_tips';var nav3 = 'Celebrity_Styles';var nav4 = 'Find_A_Salon';var nav5 = 'AntiDiversion';var nav6 = 'Matrix_Buzz';var nav7 = 'Editors_Picks';var nav8 = 'About_Matrix';return eval('nav' + navItem);}
 var imageDir = '/images/';
 //-->
 </script>
@@ -39,30 +39,32 @@ var imageDir = '/images/';
 		<td colspan="4" class="designdefault" align="right" valign="bottom"><img src="/images/clear.gif" width="1" height="55"><br><a href="/"><img src="/images/logo/default.gif" width="262" height="40" alt="Matrix Home" border="0"></a></td>
 	</tr>
 	<tr>
-		<td><a href="/find_your_hair_style/"><img src="/images/EN/header/nav/hairstyles.gif" width="74" height="26" alt="Latest Hairstyles" border="0" name="nav1" id="nav1" onmouseover="navchg(1,1,'EN');" onmouseout="navchg(1,0,'EN');"></a></td>
-		<td><a href="/stylists_tips/"><img src="/images/EN/header/nav/stylists_tips.gif" width="93" height="26" alt="Stylist's Tips" border="0" name="nav2" id="nav2" onmouseover="navchg(2,1,'EN');" onmouseout="navchg(2,0,'EN');"></a></td>
-		<td><a href="/celebrity_styles/"><img src="/images/EN/header/nav/Celebrity_Styles.gif" width="111" height="26" alt="Celebrity Styles" border="0" name="nav3" id="nav3" onmouseover="navchg(3,1,'EN');" onmouseout="navchg(3,0,'EN');"></a></td>
-		<td><a href="/find_a_salon/"><img src="/images/EN/header/nav/Find_A_Salon.gif" width="99" height="26" alt="Find a Salon" border="0" name="nav4" id="nav4" onmouseover="navchg(4,1,'EN');" onmouseout="navchg(4,0,'EN');"></a></td>
-		<td><a href="/salon_offers/"><img src="/images/EN/header/nav/Salon_Offers.gif" width="90" height="26" alt="Salon Coupons" border="0" name="nav5" id="nav5" onmouseover="navchg(5,1,'EN');" onmouseout="navchg(5,0,'EN');"></a></td>
-		<td><a href="/matrix_buzz/"><img src="/images/EN/header/nav/Matrix_Buzz.gif" width="113" height="26" alt="Matrix Buzz" border="0" name="nav6" id="nav6" onmouseover="navchg(6,1,'EN');" onmouseout="navchg(6,0,'EN');"></a></td>
-		<td><a href="/editors_picks/"><img src="/images/EN/header/nav/Editors_Picks.gif" width="97" height="26" alt="Editor's Picks" border="0" name="nav7" id="nav7" onmouseover="navchg(7,1,'EN');" onmouseout="navchg(7,0,'EN');"></a></td>
-		<td><a href="/about_matrix/"><img src="/images/EN/header/nav/About_Matrix_a.gif" width="91" height="26" alt="About Matrix" border="0"></a></td>
+		<td><a href="/find_your_hair_style/"><img src="/images/EN/header/nav/hairstyles.gif" width="70" height="26" alt="Latest Hairstyles" border="0" name="nav1" id="nav1" onmouseover="navchg(1,1,'EN');" onmouseout="navchg(1,0,'EN');"></a></td>
+		<td><a href="/stylists_tips/"><img src="/images/EN/header/nav/stylists_tips.gif" width="86" height="26" alt="Stylist's Tips" border="0" name="nav2" id="nav2" onmouseover="navchg(2,1,'EN');" onmouseout="navchg(2,0,'EN');"></a></td>
+		<td><a href="/celebrity_styles/"><img src="/images/EN/header/nav/Celebrity_Styles.gif" width="103" height="26" alt="Celebrity Styles" border="0" name="nav3" id="nav3" onmouseover="navchg(3,1,'EN');" onmouseout="navchg(3,0,'EN');"></a></td>
+		<td><a href="/find_a_salon/"><img src="/images/EN/header/nav/Find_A_Salon.gif" width="91" height="26" alt="Find a Salon" border="0" name="nav4" id="nav4" onmouseover="navchg(4,1,'EN');" onmouseout="navchg(4,0,'EN');"></a></td>
+		
+		<td><a href="/matrix_buzz/"><img src="/images/EN/header/nav/Matrix_Buzz.gif" width="106" height="26" alt="Matrix Buzz" border="0" name="nav6" id="nav6" onmouseover="navchg(6,1,'EN');" onmouseout="navchg(6,0,'EN');"></a></td>
+		<td><a href="/editors_picks/"><img src="/images/EN/header/nav/Editors_Picks.gif" width="90" height="26" alt="Editor's Picks" border="0" name="nav7" id="nav7" onmouseover="navchg(7,1,'EN');" onmouseout="navchg(7,0,'EN');"></a></td>
+			
+			<td><a href="/about_matrix/diversion.aspx"><img src="/images/EN/header/nav/AntiDiversion.gif" width="134" height="26" alt="Salon Coupons" border="0" name="nav5" id="nav5" onmouseover="navchg(5,1,'EN');" onmouseout="navchg(5,0,'EN');"></a></td>
+			
+		<td><a href="/about_matrix/"><img src="/images/EN/header/nav/About_Matrix_a.gif" width="88" height="26" alt="About Matrix" border="0"></a></td>
 	</tr>
 	<tr>
-		<td colspan="8"><table width="100%" border="0" cellpadding="0" cellspacing="0">
+		<td colspan="8">
+		<table width="100%" border="0" cellpadding="0" cellspacing="0">
 			<tbody><tr>
 				<td class="navBorder"><img src="/images/clear.gif" width="1" height="1"></td>
-				<td class="navBG"><img src="/images/clear.gif" width="1" height="1"></td>
-				<td class="navBG"><img src="/images/clear.gif" width="70" height="1"></td>
+				
 				<td class="navBG"><img src="/images/clear.gif" width="541" height="1"></td>
 				<td class="navBG"><img src="/images/clear.gif" width="154" height="1"></td>
 				<td class="navBorder"><img src="/images/clear.gif" width="1" height="1"></td>
 			</tr>
 			<tr>
-				<td class="navBorder"><img src="/images/clear.gif" width="1" height="1"></td>
-				<td class="navBG"><img src="/images/clear.gif" width="1" height="34"></td>
-				<td class="navBG">&nbsp; <a href="/" class="navProductLink">« Home</a></td>
-				<td class="navBG" align="right"><span class="navProductLink"><a href="/products/" class="navProductLink">Matrix Products</a> | <a href="/products/men/" class="navProductLink">Matrix Men</a> | <a href="/products/biolage/" class="navProductLink">Biolage</a> | <a href="/products/amplify/" class="navProductLink">Amplify</a> | <a href="/products/color_smart/" class="navProductLink">Color.smart</a> | <a href="/products/curl_life" class="navProductLink">Curl.life</a> | <a href="/products/sleek_look/" class="navProductLink">Sleek.look</a></span></td>
+				<td class="navBorder"><img src="/images/clear.gif" width="1" height="34"></td>
+				
+				<td class="navBG" align="right"><span class="navProductLink"><a href="/products/" class="navProductLink">Matrix Products</a> | <a href="/products/amplify/" class="navProductLink">Amplify</a> | <a href="/products/biolage/" class="navProductLink">Biolage</a> | <a href="/products/men/" class="navProductLink">Matrix Men</a> | <a href="/products/shade_memory/" class="navProductLink">Shade Memory</a> | <a href="/products/sleek_look/" class="navProductLink">Sleek.look</a> | <a href="/products/vavoom/" class="navProductLink">Vavoom</a></span></td>
 				<td class="navBG" align="center"><a href="#" onmouseover="setLyr(this,'product');SlMnu.showMenu('menu1');" onmouseout="SlMnu.hideMenu('menu1')"><img src="/images/EN/header/more_products.gif" width="140" height="21" alt="More Hair Products" border="0"></a><br>
 				<img src="/images/clear.gif" width="140" height="1" name="prodmenu" id="prodmenu"></td>
 				<td class="navBorder"><img src="/images/clear.gif" width="1" height="1"></td>
@@ -311,10 +313,10 @@ var imageDir = '/images/';
 		<td colspan="5"><img src="/images/clear.gif" width="1" height="2"></td>
 	</tr>
 	<tr>
-		<td colspan="5" class="navFooter"><a href="/find_a_salon/">Salon Locator</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="/find_your_hair_style/">Hairstyles</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="/contact_us/">Contact Us</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="/about_matrix/privacy_statement.aspx">Privacy Policy</a></td>
+		<td colspan="5" class="navFooter"><a href="/find_a_salon/">Salon Locator</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="/about_matrix/diversion.aspx">Anti-Diversion Policy</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="/find_your_hair_style/">Hairstyles</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="/contact_us/">Contact Us</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="/about_matrix/privacy_statement.aspx">Privacy Policy</a></td>
 	</tr>
 </tbody></table>
-</center></div>
+<br></center></div>
 <div id="menu1Container" style="visibility: hidden;">
 <div id="menu1Content" class="menu" style="top: -286px;">
 <table cellpadding="0" cellspacing="0" border="0" class="navDrop" width="140">
@@ -338,6 +340,9 @@ var imageDir = '/images/';
 	</tr>
 	<tr>
 		<td class="navDrop"><a href="/products/matrix_essentials/" class="navDropLink">Matrix Essentials</a></td>
+	</tr>
+	<tr>
+		<td class="navDrop"><a href="/products/shade_memory/" class="navDropLink">Shade Memory</a></td>
 	</tr>
 	<tr>
 		<td class="navDrop"><a href="/products/sleek_look/" class="navDropLink">Sleek.look</a></td>
@@ -367,6 +372,9 @@ var imageDir = '/images/';
 		<td class="navDrop"><a href="/products/opti_smooth/" class="navDropLink">Opti.smooth</a></td>
 	</tr>
 	<tr>
+		<td class="navDrop"><a href="/products/prizms/" class="navDropLink">Prizms.PLUS</a></td>
+	</tr>
+	<tr>
 		<td class="navDrop"><a href="/products/socolor/" class="navDropLink">Socolor</a></td>
 	</tr>
 	<tr>
@@ -389,13 +397,32 @@ var imageDir = '/images/';
 		<td class="internatDrop"><span class="internatLink"><b>&middot;</b> <a href="http://spanish.matrix.com/" class="internatLink">Matrix en Espa&ntilde;ol</a></span></td>
 	</tr>-->
 	<tr>
+		<td class="internatDrop"><span class="internatLink"><b>·</b> <a href="http://www.matrixaustralia.com" class="internatLink">Matrix Australia</a></span></td>
+	</tr>
+	<tr>
+		<td class="internatDrop"><span class="internatLink"><b>·</b> <a href="http://www.matrixhaircare.at" class="internatLink">Matrix Austria</a></span></td>
+	</tr>
+	<tr>
 		<td class="internatDrop"><span class="internatLink"><b>·</b> <a href="http://www.enjoy-matrix.fr" class="internatLink">Matrix France</a></span></td>
+	</tr>
+
+	<tr>
+		<td class="internatDrop"><span class="internatLink"><b>·</b> <a href="http://www.matrixhaircare.de" class="internatLink">Matrix Germany</a></span></td>
+	</tr>
+
+	<tr>
+		<td class="internatDrop"><span class="internatLink"><b>·</b> <a href="http://www.matrix-italia.it " class="internatLink">Matrix Italy</a></span></td>
+	</tr>
+
+	<tr>
+		<td class="internatDrop"><span class="internatLink"><b>·</b> <a href="http://www.matrixnederland.nl" class="internatLink">Matrix Netherlands</a></span></td>
+	</tr>
+
+	<tr>
+		<td class="internatDrop"><span class="internatLink"><b>·</b> <a href="http://www.matrixhaircare.ch" class="internatLink">Matrix Switzerland</a></span></td>
 	</tr>
 	<tr>
 		<td class="internatDrop"><span class="internatLink"><b>·</b> <a href="http://www.matrixhaircare.co.uk" class="internatLink">Matrix UK</a></span></td>
-	</tr>
-	<tr>
-		<td class="internatDrop"><span class="internatLink"><b>·</b> <a href="http://www.matrixnederland.nl" class="internatLink">Matrix Netherlands</a></span></td>
 	</tr>
 	<tr>
 		<td><img src="/images/clear.gif" width="1" height="2"></td>
@@ -403,6 +430,9 @@ var imageDir = '/images/';
 </tbody></table>
 </div>
 </div>
+<script type="text/javascript">
+disableSelection(document.body) //disable text selection on entire body of page
+</script>
 
 
 </body></html>
