--- a/s/sp/spl/splcenter.org.html
+++ b/s/sp/spl/splcenter.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the splcenter.org privacy policy that was archived on 2007-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070630140916id_/http%3A//www.splcenter.org/center/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the splcenter.org privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230043034id_/http%3A//www.splcenter.org/center/privacy.jsp) for the most accurate reproduction.-->
 
 <html><head>
 <title>SPLCenter.org: Privacy Policy</title>
@@ -24,8 +24,156 @@
     <td>
 
 
+ 				
+
+<style type="text/css">
+<!--
+.alphaLayer {
+	position:absolute;
+	top:0px;
+	left:0px;
+  /* Mozilla ignores crazy MS image filters, so it will skip the following */
+    filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=scale, src='/images/transparent.png');
+}
+/* IE ignores styles with [attributes], so it will skip the following. */
+.alphaLayer[class] {
+  background-image:url(/images/transparent.png);
+}
+
+.eoyDonateCloseButton{
+	position:relative;
+	top:-3px;
+	float:right;
+	height:20px;
+	width:55px;
+	z-index:90;
+}
+
+.eoyDonateHeaderSpacer{
+	height:105px;
+}
+
+.eoyDonateMainText{
+	color:#000000;
+}
+
+.eoyDonateDButton{
+	position:relative;
+	top:18px;
+	left:142px;
+	width:85px;
+	height:20px;
+}
+
+.eoyDonateDButton a{
+	text-decoration:none;
+}
+
+.eoyDonateDButtonSpacer{
+	width:85px;
+	height:20px;
+}
+
+#endofyear122007_child{
+	padding:15px;
+	text-align:left;
+	position:relative;
+	top:-25px;
+	height:330px;
+}
+-->
+
+</style>
 
 
+
+<!--[if lt IE 8]>
+
+<style type="text/css">
+
+
+
+.eoyDonateCloseButton{
+	position:relative;
+	float:right;
+	top:-20px;
+	right:10px;
+	height:20px;
+	width:20px;
+	z-index:90;
+}
+
+.eoyDonateHeaderSpacer{
+	position:relative;
+	top:0px;
+	left:0px;
+	height:70px;
+}
+
+.eoyDonateMainText{
+	position:relative;
+	top:0px;
+	left:0px;
+	width:380px;
+	color:#000000;
+}
+
+.eoyDonateDButton{
+	position:relative;
+	top:20px;
+	left:150px;
+	width:85px;
+	height:20px;
+}
+
+.eoyDonateDButton a{
+	text-decoration:none;
+}
+
+.eoyDonateDButtonSpacer{
+	width:85px;
+	height:20px;
+}
+
+#endofyear122007_child{
+	padding:15px;
+	text-align:left;
+	position:relative;
+	top:-25px;
+	height:330px;
+}
+
+</style>
+
+<![endif]-->
+
+
+
+<div id="opacity" class="alphaLayer" style="display:none;"></div>
+<div id="endofyear122007" style="position: absolute; top: 10%; left: 10%; width: 400px; height: 57px; background-image: url(&quot;/images/static/eoyDonateHeaderBack.jpg&quot;); background-repeat: no-repeat; font-size: 14px; font-family: Verdana, Helvetica, Geneva, Arial, sans-serif; overflow: hidden;">
+	<p style="position:relative; top:0px; left:0px; padding:6px; margin:0px; font-size:20px; color:#FFFFFF; font-family: Verdana, Helvetica, Geneva, Arial, sans-serif;">
+		
+	</p>
+	<p style="position:relative; top:-10px; right:0px; padding:6px; margin:0px; text-align:right;font-family: Verdana, Helvetica, Geneva, Arial, sans-serif;">
+		<a href="javascript:close('endofyear122007','','/images/ntpagetag.gif?lc=http://www.splcenter.org/includes/campaign/floater.jsp&amp;rf=/center/privacy.jsp&amp;displaylayercampaign=endofyear122007&amp;displaylayeraction=close&amp;pv=1')" style="color:#FFFFFF;text-decoration:none;"></a></p><div class="eoyDonateCloseButton"></div>
+		<div id="endofyear122007_child">
+				<div class="eoyDonateHeaderSpacer"></div><div class="eoyDonateMainText">Make a gift by Dec. 31 to support the Southern Poverty Law Center's work fighting hate and injustice, and a small group of our supporters will match your donation - doubling the value.<br><br>We thank you for the opportunity to work by your side for the cause of justice, and we hope you'll take advantage of this special opportunity to support our critical mission with a tax-deductible gift.</div><div class="eoyDonateDButton"><a href="https://secure.splcenter.org/donate/online/online.jsp?ondntsrc=MBQ071270POP" onclick="javascript:goURL('endofyear122007','Thank You!','https://secure.splcenter.org/donate/online/online.jsp?ondntsrc=MBQ071270POP');"><div class="eoyDonateDButtonSpacer"></div></a></div>
+			<!--URL: /.*-->
+		</div>
+	<p></p>
+</div>
+
+
+	<script type="text/javascript" language="javascript">
+		loadornot('endofyear122007','/images/ntpagetag.gif?lc=http://www.splcenter.org/includes/campaign/floater.jsp&rf=/center/privacy.jsp&displaylayercampaign=endofyear122007&displaylayeraction=view&pv=1');   
+	</script>
+
+
+
+
+
+<script type="text/javascript" src="/site/scripts/swfobject.js"></script>
+<script type="text/javascript" src="/site/scripts/swfInit.js"></script>
 
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
@@ -51,35 +199,28 @@
     <td><table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr align="center"> 
 	
-		<td class="darkkhaki" width="45"><a href="http://www.splcenter.org/index.jsp"><img src="/images/static/main_nav/nav_home_s.gif" width="45" height="25" name="home" border="0"></a></td>
+		<td class="darkkhaki" width="56"><a href="http://www.splcenter.org/index.jsp"><img src="/images/static/main_nav/nav_home_s.gif" width="56" height="25" name="home" border="0"></a></td>
 	
-		<td width="1" style="background-color:#ffffff"><img src="/images/static/spacer.gif" width="1" height="1"></td>
 	
-		<td class="darkkhaki" width="62"><a href="http://www.splcenter.org/donate/donate.jsp" onmouseover="imgOn('donate')" onmouseout="imgOff('donate')"><img src="/images/static/main_nav/nav_donate.gif" width="62" height="25" name="donate" border="0"></a></td>
+		<td class="darkkhaki" width="74"><a href="http://www.splcenter.org/donate/donate.jsp" onmouseover="imgOn('donate')" onmouseout="imgOff('donate')"><img src="/images/static/main_nav/nav_donate.gif" width="74" height="25" name="donate" border="0"></a></td>
 	
-		<td width="1" style="background-color:#ffffff"><img src="/images/static/spacer.gif" width="1" height="1"></td>
 	
-		<td class="darkkhaki" width="144"><a href="http://www.splcenter.org/intel/intpro.jsp" onmouseover="imgOn('int_proj')" onmouseout="imgOff('int_proj')"><img src="/images/static/main_nav/nav_intpr.gif" width="144" height="25" name="int_proj" border="0"></a></td>
+		<td class="darkkhaki" width="155"><a href="http://www.splcenter.org/intel/intpro.jsp" onmouseover="imgOn('int_proj')" onmouseout="imgOff('int_proj')"><img src="/images/static/main_nav/nav_intpr.gif" width="155" height="25" name="int_proj" border="0"></a></td>
 	
-		<td width="1" style="background-color:#ffffff"><img src="/images/static/spacer.gif" width="1" height="1"></td>
 	
-		<td class="darkkhaki" width="95"><a href="http://www.splcenter.org/legal/legal.jsp" onmouseover="imgOn('legal')" onmouseout="imgOff('legal')"><img src="/images/static/main_nav/nav_legal.gif" width="95" height="25" name="legal" border="0"></a></td>
+		<td class="darkkhaki" width="113"><a href="http://www.splcenter.org/legal/legal.jsp" onmouseover="imgOn('legal')" onmouseout="imgOff('legal')"><img src="/images/static/main_nav/nav_legal.gif" width="113" height="25" name="legal" border="0"></a></td>
 	
-		<td width="1" style="background-color:#ffffff"><img src="/images/static/spacer.gif" width="1" height="1"></td>
 	
-		<td class="darkkhaki" width="142"><a href="http://www.splcenter.org/crm/memorial.jsp" onmouseover="imgOn('civil_rights')" onmouseout="imgOff('civil_rights')"><img src="/images/static/main_nav/nav_mem.gif" width="142" height="25" name="civil_rights" border="0"></a></td>
+		<td class="darkkhaki" width="162"><a href="http://www.splcenter.org/crm/memorial.jsp" onmouseover="imgOn('civil_rights')" onmouseout="imgOff('civil_rights')"><img src="/images/static/main_nav/nav_mem.gif" width="162" height="25" name="civil_rights" border="0"></a></td>
 	
-		<td width="1" style="background-color:#ffffff"><img src="/images/static/spacer.gif" width="1" height="1"></td>
 	
-		<td class="darkkhaki" width="139"><a href="http://www.splcenter.org/center/tt/teach.jsp" onmouseover="imgOn('teaching')" onmouseout="imgOff('teaching')"><img src="/images/static/main_nav/nav_tt.gif" width="139" height="25" border="0" name="teaching"></a></td>
+		<td class="darkkhaki" width="137"><a href="http://www.splcenter.org/center/tt/teach.jsp" onmouseover="imgOn('teaching')" onmouseout="imgOff('teaching')"><img src="/images/static/main_nav/nav_tt.gif" width="139" height="25" border="0" name="teaching"></a></td>
 	
-		<td width="1" style="background-color:#ffffff"><img src="/images/static/spacer.gif" width="1" height="1"></td>
 	
-		<td class="darkkhaki" align="left" background="/images/static/main_nav/nav_end.gif" width="109"><a href="http://www.splcenter.org/center/torg/toler.jsp" onmouseover="imgOn('tolerance')" onmouseout="imgOff('tolerance')"><img src="/images/static/main_nav/nav_tolorg.gif" width="109" height="25" name="tolerance" border="0"></a></td>
+		<td class="darkkhaki" align="left" background="/images/static/main_nav/nav_end.gif" width="44"><a href="http://www.splcenter.org/blog" onmouseover="imgOn('blog')" onmouseout="imgOff('blog')"><img src="/images/static/main_nav/nav_blog.gif" width="44" height="25" name="blog" border="0"></a></td>
 	
 	</tr>
-</tbody></table>
-</td>
+</tbody></table></td>
   </tr>
   <tr> 
     <td>
@@ -217,6 +358,8 @@
   <tr> 
     <td colspan="3" class="leftnavspacer"><img src="/images/static/spacer.gif" width="1" height="1"></td>
   </tr>
+  
+  
   <tr> 
 		<td class="darkkhaki" colspan="3">    
       <table width="145" border="0" cellspacing="0" cellpadding="0">
@@ -227,51 +370,7 @@
         </tr>
         <tr> 
           <td>&nbsp;</td>
-          <td><a href="/news/new.jsp" class="leftnavlink">New @ the Center</a></td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr> 
-          <td colspan="3"><img src="/images/static/spacer.gif" width="10" height="8"></td>
-        </tr>
-      </tbody></table>
-    </td>
-  </tr>
-  <tr> 
-    <td colspan="3" class="leftnavspacer"><img src="/images/static/spacer.gif" width="1" height="1"></td>
-  </tr>
-  <tr> 
-		<td class="darkkhaki" colspan="3">    
-      <table width="145" border="0" cellspacing="0" cellpadding="0">
-        <tbody><tr> 
-          <td><img src="/images/static/spacer.gif" width="10" height="8"></td>
-          <td><img src="/images/static/spacer.gif" width="125" height="8"></td>
-          <td><img src="/images/static/spacer.gif" width="10" height="8"></td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td><a href="/center/splcreport/report.jsp" class="leftnavlink">SPLC Report</a></td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr> 
-          <td colspan="3"><img src="/images/static/spacer.gif" width="10" height="8"></td>
-        </tr>
-      </tbody></table>
-    </td>
-  </tr>
-  <tr> 
-    <td colspan="3" class="leftnavspacer"><img src="/images/static/spacer.gif" width="1" height="1"></td>
-  </tr>
-  <tr> 
-		<td class="darkkhaki" colspan="3">    
-      <table width="145" border="0" cellspacing="0" cellpadding="0">
-        <tbody><tr> 
-          <td><img src="/images/static/spacer.gif" width="10" height="8"></td>
-          <td><img src="/images/static/spacer.gif" width="125" height="8"></td>
-          <td><img src="/images/static/spacer.gif" width="10" height="8"></td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td><a href="/center/subscribe.jsp" class="leftnavlink">Subscribe to <br>the Center <br>E-newsletter</a></td>
+          <td><a href="/center/subscribe.jsp" class="leftnavlink">Subscribe to <br>the SPLC <br>E-newsletter</a></td>
           <td>&nbsp;</td>
         </tr>
         <tr> 
