--- a/g/go/goo/goodsamclub.com.html
+++ b/g/go/goo/goodsamclub.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the goodsamclub.com privacy policy that was archived on 2007-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070616044501id_/http%3A//www.goodsamclub.com/help/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the goodsamclub.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230050856id_/http%3A//www.goodsamclub.com/help/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>Good Sam Club</title>
@@ -287,37 +287,37 @@
 
 <script language="JavaScript">
 	image0 = new Image();
-	image0.src = "images/m_renew.gif";
+	image0.src = "/images/m_renew.gif";
 
 	image2 = new Image();
-	image2.src = "images/m_benefits.gif";
+	image2.src = "/images/m_benefits.gif";
 	
 	image3 = new Image();
-	image3.src = "images/m_highways.gif";
+	image3.src = "/images/m_highways.gif";
 	
 	image4 = new Image();
-	image4.src = "images/m_trip.gif";
+	image4.src = "/images/m_trip.gif";
 	
 	image5 = new Image();
-	image5.src = "images/m_chapters.gif";
+	image5.src = "/images/m_chapters.gif";
 	
 	image6 = new Image();
-	image6.src = "images/m_standby.gif";
+	image6.src = "/images/m_standby.gif";
 	
 	image7 = new Image();
-	image7.src = "images/m_ms.gif";
+	image7.src = "/images/m_ms.gif";
 	
 	image8 = new Image();
-	image8.src = "images/m_destinations.gif";
+	image8.src = "/images/m_destinations.gif";
 	
 	image9 = new Image();
-	image9.src = "images/m_free.gif";
+	image9.src = "/images/m_free.gif";
 	
 	image10 = new Image();
-	image10.src = "images/m_prodtest.gif";
+	image10.src = "/images/m_prodtest.gif";
 	
 	image11 = new Image();
-	image11.src = "images/m_parking.gif";
+	image11.src = "/images/m_parking.gif";
 </script>
 </head>
 <body alink="#0066cc" bgcolor="#ffffff" link="#000099" topmargin="2" leftmargin="3" vlink="#000000" marginheight="0" marginwidth="0">
@@ -396,7 +396,7 @@
 	</tr>
 </tbody></table>
 
-<img name="s_i_cwgoodsamclubcom" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/cwgoodsamclubcom/1/G.9-PD-R/s78081112921059?[AQB]&amp;ndh=1&amp;t=31/0/2020%205%3A48%3A47%205%200&amp;pageName=Help%20-%20Privacy&amp;g=https%3A//web.archive.org/web/20070616044501id_/http%253A//www.goodsamclub.com/help/privacy.cfm&amp;server=ONLINE-PROD2&amp;cc=USD&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]"><table border="0" cellpadding="0" cellspacing="0" width="740">
+<img name="s_i_cwgoodsamclubcom" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/cwgoodsamclubcom/1/G.9-PD-R/s74124879233404?[AQB]&amp;ndh=1&amp;t=31/0/2020%205%3A48%3A47%205%200&amp;pageName=Help%20-%20Privacy&amp;g=https%3A//web.archive.org/web/20071230050856id_/http%253A//www.goodsamclub.com/help/privacy.cfm&amp;server=ONLINE-PROD2&amp;cc=USD&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]"><table border="0" cellpadding="0" cellspacing="0" width="740">
 	<tbody><tr>
 		
 		<td valign="top" width="100%" class="normal">
@@ -812,6 +812,7 @@
 
 </script>
 
+<!--16 -->
 
 
 <script src="/glb/omniture/s_code_remote.js" type="text/javascript"></script>
