--- a/f/fr/fre/freedesktopwallpapers.net.html
+++ b/f/fr/fre/freedesktopwallpapers.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freedesktopwallpapers.net privacy policy that was archived on 2007-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070626135618id_/http%3A//www.freedesktopwallpapers.net/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freedesktopwallpapers.net privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230054406id_/http%3A//www.freedesktopwallpapers.net/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head><title>Privacy Policy</title>
 <style type="text/css">
@@ -78,13 +78,13 @@ d.write("\" width=1 height=1 align=\"right\" alt=\"\">");
 
 <script language="JavaScript">
 if (navigator.appName != "Netscape") {
-document.write('<IFRAME SRC="http://www.romantic-lyrics.com/rotate.php" WIDTH="468" HEIGHT="60" MARGINWIDTH="0" MARGINHEIGHT="0" HSPACE="0" VSPACE="0" FRAMEBORDER="0" SCROLLING="NO"></IFRAME>');
+document.write('<IFRAME SRC="http://www.freedesktopwallpapers.net/alead.html" WIDTH="700" HEIGHT="80" MARGINWIDTH="0" MARGINHEIGHT="0" HSPACE="0" VSPACE="0" FRAMEBORDER="0" SCROLLING="NO"></IFRAME>');
 } else {
-document.write('<ILAYER SRC="http://www.romantic-lyrics.com/rotate.php" WIDTH="468" HEIGHT="60" MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" SCROLLING="NO"></ILAYER>');
+document.write('<ILAYER SRC="http://www.freedesktopwallpapers.net/alead.html" WIDTH="700" HEIGHT="80" MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" SCROLLING="NO"></ILAYER>');
 }
-</script><ilayer src="http://www.romantic-lyrics.com/rotate.php" width="468" height="60" marginwidth="0" marginheight="0" frameborder="0" scrolling="NO"></ilayer>
+</script><ilayer src="http://www.freedesktopwallpapers.net/alead.html" width="700" height="80" marginwidth="0" marginheight="0" frameborder="0" scrolling="NO"></ilayer>
 <noscript>
-<IFRAME SRC="http://www.romantic-lyrics.com/rotate.php" WIDTH="468" HEIGHT="60" MARGINWIDTH="0" MARGINHEIGHT="0" HSPACE="0" VSPACE="0" FRAMEBORDER="0" SCROLLING="NO"></IFRAME>
+<IFRAME SRC="http://www.freedesktopwallpapers.net/alead.html" WIDTH="700" HEIGHT="80" MARGINWIDTH="0" MARGINHEIGHT="0" HSPACE="0" VSPACE="0" FRAMEBORDER="0" SCROLLING="NO"></IFRAME>
 </noscript>
 
 <table width="770" cellpadding="5" cellspacing="0" border="1" bordercolor="CCCCFF" bgcolor="ffffff">
