--- a/g/gi/gic/gicare.com.html
+++ b/g/gi/gic/gicare.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gicare.com privacy policy that was archived on 2007-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070623054056id_/http%3A//gicare.com/jprivacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gicare.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230062912id_/http%3A//www.gicare.com/jprivacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN"><html><head>   <title>Jackson Gastroenterology Privacy Policy</title>
 <!--by  CMBrumbaugh  4.10.2003;  
