--- a/c/co/col/collegeaffiliates.com.html
+++ b/c/co/col/collegeaffiliates.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the collegeaffiliates.com privacy policy that was archived on 2007-04-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070427124529id_/http%3A//www.collegeaffiliates.com/privacy-statement.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the collegeaffiliates.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230063623id_/http%3A//collegeaffiliates.com/privacy-statement.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
