--- a/t/to/top/topshareware.com.html
+++ b/t/to/top/topshareware.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the topshareware.com privacy policy that was archived on 2007-06-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070615085854id_/http%3A//www.topshareware.com/info/privacy_policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the topshareware.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230073808id_/http%3A//www.topshareware.com/info/privacy_policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Policy - TopShareware.com</title>
@@ -8,7 +8,7 @@
 <link href="/inc/cat.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div id="nav" class="framework"><div id="navRight" class="fontSmall"><a href="/info/link_to_us.aspx">link to us</a><a href="/info/contact_us.shtml">contact us</a></div>
+<div id="nav" class="framework"><div id="navRight" class="fontSmall"><a href="/info/contact_us.shtml">contact us</a></div>
 <div id="navLeft"><a href="http://www.topshareware.com"><img src="/images/logo/site_logo.png" alt="Software &amp; Game Downloads"></a></div></div>
 <div id="menu" class="framework"><ul>
 <li><a href="/">home</a></li>
